# rust-pzm-project

./: .env  Cargo.toml  README.md  docker-compose.override.yml  docker-compose.yml
common-utils/: Cargo.toml
common-utils/src/: lib.rs
consumer/: .env  Cargo.toml  Dockerfile
consumer-stocks/: Cargo.toml
consumer-stocks-service/: .env  Cargo.toml  Dockerfile
consumer-stocks-service/src/: lib.rs  main.rs
consumer-stocks-service/src/persistence/: model.rs  repository.rs  schema.rs
consumer-stocks/src/: main.rs
consumer/src/: main.rs
stocks-endpoints/: Cargo.toml  Dockerfile
stocks-endpoints/src/: main.rs
stocks-service/: .env  Cargo.toml  Dockerfile
stocks-service/migrations/2023-09-17-065939_create_stocks/: up.sql
stocks-service/migrations/2023-09-19-072912_add_columns_to_stocks/: down.sql  up.sql
stocks-service/migrations/2023-09-20-072912_create_stocks_summary_table/: up.sql
stocks-service/src/: graphql.rs  kafka.rs  lib.rs  main.rs  stock_functions.rs
stocks-service/src/persistence/: connection.rs  model.rs  repository.rs  schema.rs
stocks-service/tests/: mutation_tests.rs
stocks-service/tests/common/: mod.rs
